Make sure the student name edit doesn't flicker and is wide enough

--- a/StudentProgress.Web/wwwroot/css/group.css
+++ b/StudentProgress.Web/wwwroot/css/group.css
@@ -7,6 +7,10 @@
     width: 250px;
 }
 
+.student-name {
+    min-width: 150px;
+}
+
 .name-edit {
     visibility: hidden;
     cursor: pointer;
