--- a/StudentProgress.Web/wwwroot/css/site.css
+++ b/StudentProgress.Web/wwwroot/css/site.css
@@ -3,6 +3,8 @@ for details on configuring this project to bundle and minify static web assets. 
 
 /* Sticky footer styles
 -------------------------------------------------- */
+[x-cloak] { display: none; }
+
 html {
     position: relative;
     min-height: 100%;
